# CellularAutomata

./: .gitignore  CellularAutomata.sln  LICENSE  README.md
CellularAutomata/: CMakeLists.txt  CMakeSettings.json  Cell.cpp  Cell.h  CellularAutomata.vcxproj  CellularAutomata.vcxproj.filters  LangtonsAnt.cpp  LangtonsAnt.h  Wireworld.cpp  Wireworld.h  WireworldCell.cpp  WireworldCell.h
CellularAutomata/Release/: CellularAutomata.exe.recipe  CellularAutomata.iobj  CellularAutomata.ipdb
CellularAutomata/Release/CellularAutomata.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CellularAutomata.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CellularAutomata/Simulation/: CMakeLists.txt  Cell.cpp  GameOfLife.cpp  LangtonsAnt.cpp  Wireworld.cpp  WireworldCell.cpp  entry.cpp
ConwaysGOL/: CMakeLists.txt
ConwaysGOL/Simulation/: CMakeLists.txt  Cell.h  GameOfLife.cpp  GameOfLife.h  LangtonsAnt.cpp  LangtonsAnt.h  Simulation.cpp  Simulation.h  entry.cpp
